# linearnexus

./: .gitignore  ARCHITECTURE.md  CONTRIBUTOR_GUIDE.md  GETTING_STARTED.md  README.md  ROADMAP.md  TECHNICAL_REFERENCE.md  bench_delta_rule_pallas.py  bench_delta_rule_triton.py  bench_kda_kernels.py  benchmark_architectures.py  benchmark_results.json  commit.sh  debug_gated_deltanet.py  pyproject.toml  sample.py  test.py  train_lm.py  upgrade_codebase.md  validate_gpu_training.py
.github/: copilot-instructions.md
docs/: adding_new_blocks.md  adding_new_layers.md  architecture_overview.md  checkpointing_guide.md  code_review_fla.md  concepts.md  flax_nnx_glossary.md  flax_nnx_quick_reference.md  implementations.md  pallas_gpu_glossary.md  pallas_gpu_reference.md  pallas_patterns.md  pallas_status.md  pallas_tpu_reference.md  repository_overview.md  testing.md  training_guide.md  why_flax_nnx.md
examples/: run_mamba_reference.py
examples/fla/: __init__.py
examples/fla/layers/: abc.py  attn.py  comba.py  delta_net.py  deltaformer.py  gated_deltanet.py  gated_deltaproduct.py  gla.py  gsa.py  hgrn.py  hgrn2.py  kda.py  linear_attn.py  mamba2.py  mesa_net.py  mla.py  mom.py  multiscale_retention.py  path_attn.py  rebased.py  rodimus.py  rwkv7.py  simple_gla.py
examples/fla/models/: __init__.py
examples/fla/models/abc/: modeling_abc.py
examples/fla/models/bitnet/: modeling_bitnet.py
examples/fla/models/comba/: modeling_comba.py
examples/fla/models/delta_net/: modeling_delta_net.py
examples/fla/models/deltaformer/: modeling_deltaformer.py
examples/fla/models/forgetting_transformer/: modeling_forgetting_transformer.py
examples/fla/models/gated_deltanet/: modeling_gated_deltanet.py
examples/fla/models/gated_deltaproduct/: modeling_gated_deltaproduct.py
examples/fla/models/gla/: modeling_gla.py
examples/fla/models/gsa/: modeling_gsa.py
examples/fla/models/hgrn/: modeling_hgrn.py
examples/fla/models/hgrn2/: modeling_hgrn2.py
examples/fla/models/kda/: modeling_kda.py
examples/fla/models/lightnet/: modeling_lightnet.py
examples/fla/models/linear_attn/: modeling_linear_attn.py
examples/fla/models/log_linear_mamba2/: __init__.py  modeling_log_linear_mamba2.py
examples/fla/models/mamba/: __init__.py  modeling_mamba.py
examples/fla/models/mamba2/: modeling_mamba2.py
examples/fla/models/mesa_net/: modeling_mesa_net.py
examples/fla/models/mla/: __init__.py  modeling_mla.py
examples/fla/models/mom/: modeling_mom.py
examples/fla/models/nsa/: __init__.py  modeling_nsa.py
examples/fla/models/path_attn/: modeling_path_attention.py
examples/fla/models/retnet/: modeling_retnet.py
examples/fla/models/rodimus/: modeling_rodimus.py
examples/fla/models/rwkv6/: modeling_rwkv6.py
examples/fla/models/rwkv7/: modeling_rwkv7.py
examples/fla/models/samba/: __init__.py  modeling_samba.py
examples/fla/modules/: activations.py  convolution.py  fused_bitlinear.py  fused_kl_div.py  fused_linear_cross_entropy.py  fused_norm_gate.py  grpo.py  l2norm.py  layernorm.py  rotary.py  token_shift.py
examples/fla/ops/common/: chunk_delta_h.py  (+2 more)
linearnexus/: __init__.py  checkpoint.py  data.py  generate.py  models.py  optim.py  registry.py
linearnexus/core/: __init__.py  cache.py  config.py  conv.py  gating.py  mode.py  padding.py
linearnexus/kernels/: __init__.py  backend.py  base.py  mamba_pallas.py  mamba_reference.py  mamba_tpu.py
linearnexus/kernels/pallas/: __init__.py  delta_rule.py
linearnexus/kernels/triton/: __init__.py  delta_rule.py
linearnexus/layers/: __init__.py  mamba.py
linearnexus/models/: __init__.py
linearnexus/modules/: __init__.py  common.py
linearnexus/modules/attention/: __init__.py  causal.py  mla.py
linearnexus/modules/hybrid/: __init__.py
linearnexus/modules/linear_attn/: __init__.py  delta_net.py  gated_deltanet.py  kda.py  rwkv6.py  rwkv7.py
linearnexus/modules/sparse/: __init__.py
linearnexus/modules/ssm/: __init__.py  mamba.py  mamba2.py
linearnexus/train/: __init__.py  base.py  factory.py  grpo.py  ppo.py  sft.py
tests/: conftest.py  test_benchmark_param_matching.py  test_checkpoint.py  test_comprehensive.py  test_deltanet.py  test_gated_deltanet.py  test_kda.py  test_mamba2.py  test_mamba_kernels.py  test_mamba_layer.py  test_mamba_tpu.py  test_mla.py  test_rwkv6.py  test_rwkv7.py
tests/helpers/: parity.py
(+43 files in other folders)
