[project]
name = "linearnexus"
version = "0.1.0"
description = "Linear attention research stack built on JAX/Flax NNx"
authors = [{ name = "LinearNexus Contributors" }]
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "flax>=0.8.3",
  "optax>=0.2.3",
  "numpy>=1.26.0",
  "einops>=0.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=24.3.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
