[project]
name = "linearnexus"
version = "0.2.0"
description = "Minimal LLM training framework in JAX - models, training, and inference"
authors = [{ name = "LinearNexus Contributors" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["jax", "llm", "transformer", "mamba", "deep-learning", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "jax>=0.4.28",
  "jaxlib>=0.4.28",
  "flax>=0.8.3",
  "optax>=0.2.3",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=24.3.0",
  "ruff>=0.6.0"
]
full = [
  "tiktoken>=0.5.0",      # BPE tokenizer
  "wandb>=0.16.0",        # Logging
  "tqdm>=4.66.0",         # Progress bars
]

[project.scripts]
linearnexus-train = "linearnexus.train:main"

[project.urls]
Homepage = "https://github.com/saran-gangster/linearnexus"
Repository = "https://github.com/saran-gangster/linearnexus"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["linearnexus", "linearnexus.*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
